# MyDiscord

./: .env  .gitignore  CMakeLists.txt  Makefile  Mydiscord.sql  client.c  main.c  server.c
data/: mydiscord.sql
models/: chat_page.c  chat_page.h  db.c  home_page.c  home_page.h  main.c  server.c
test/: client.c  client.h  gui.c  gui.h  main.c  server.c
test2/: mydiscord.sql
test3/: client.c  server.c
